--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/jibenziliao/generator-jibenziliao-react.git"
+  },
   "keywords": [
     "react",
     "webpack2",
-    "yeoman"
+    "yeoman",
+    "yeoman-generator"
   ],
   "author": "jibenziliao",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs":{
+    "url": "https://github.com/jibenziliao/generator-jibenziliao-react/issues"
+  },
+  "homepage": "https://github.com/jibenziliao/generator-jibenziliao-react"
 }
